no dark mode + fix tecnico

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -90,10 +90,9 @@ strong {
 }
 
 .custom-btn {
-  background: #fff;
-  color: #5b5b5b;
+  background: white;
   font-weight: bold;
-  border: #5b5b5b 1px solid;
+  border: black 2px solid;
   border-radius: 50px;
   padding: 13px 29px;
   font-size: 14px;
@@ -185,6 +184,7 @@ strong {
   will-change: transform;
   transition: transform 200ms linear;
 }
+
 .navbar[class*="-unpinned"] {
   transform: translate(0, -150%);
 }
@@ -200,6 +200,10 @@ strong {
 
 .navbar-brand {
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
 }
 
 .navbar-expand-sm .navbar-nav .nav-link {
@@ -208,7 +212,7 @@ strong {
 
 .nav-link {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1.5rem;
   overflow: hidden;
 }
 .nav-link span {
@@ -337,6 +341,14 @@ strong {
 .dark-mode .owl-carousel .owl-nav button.owl-prev,
 .dark-mode .owl-carousel button.owl-dot {
   color: #ffffff;
+}
+
+.center {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid black;
 }
 
 .resume {
